# wtr_chassis

./: README.md  wtr_chassis.md
catkin_ws/: README.md
catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/devel/include/wtr_usb2ros/: Test.h  motor_msgs.h
catkin_ws/devel/lib/joy/: gpio_joy  joy_node  xbox
catkin_ws/devel/lib/launching/: launching
catkin_ws/devel/lib/pkgconfig/: TF.pc  joy.pc  launching.pc  tf.pc  twist2multiarray.pc  wtr_odom.pc  wtr_usb2ros.pc
catkin_ws/devel/lib/python2.7/dist-packages/wtr_usb2ros/msg/: _Test.py  __init__.py  _motor_msgs.py
catkin_ws/devel/lib/twist2multiarray/: PR  TR
catkin_ws/devel/lib/wtr_odom/: wtr_odom
catkin_ws/devel/lib/wtr_usb2ros/: controller  gpio  main
catkin_ws/devel/share/TF/cmake/: TFConfig.cmake
catkin_ws/devel/share/common-lisp/ros/wtr_usb2ros/msg/: Test.lisp  _package.lisp
catkin_ws/devel/share/gennodejs/ros/wtr_usb2ros/msg/: Test.js  _index.js
catkin_ws/devel/share/joy/cmake/: joyConfig.cmake
catkin_ws/devel/share/launching/cmake/: launchingConfig.cmake
catkin_ws/devel/share/roseus/ros/wtr_usb2ros/: manifest.l
catkin_ws/devel/share/roseus/ros/wtr_usb2ros/msg/: motor_msgs.l
catkin_ws/devel/share/tf/cmake/: tfConfig.cmake
catkin_ws/devel/share/twist2multiarray/cmake/: twist2multiarrayConfig.cmake
catkin_ws/devel/share/wtr_odom/cmake/: wtr_odomConfig.cmake
catkin_ws/devel/share/wtr_usb2ros/cmake/: wtr_usb2ros-msg-paths.cmake  wtr_usb2rosConfig.cmake
catkin_ws/src/joy/: CMakeLists.txt
catkin_ws/src/joy/src/: gpio_joy.cpp  xbox.cpp
catkin_ws/src/launching/: CMakeLists.txt  Launching.md  Readme.md  package.xml
catkin_ws/src/launching/include/launching/: launch_node.h
catkin_ws/src/launching/launch/: launching.launch
catkin_ws/src/launching/src/: launch_node.cpp
catkin_ws/src/twist2multiarray/: CMakeLists.txt
catkin_ws/src/twist2multiarray/App/: main_pr.cpp  main_tr.cpp
catkin_ws/src/twist2multiarray/include/twist2multiarray/: FourWheelControl.h  Node.h  ThreeWheelControl.h
catkin_ws/src/twist2multiarray/launch/: PR.launch  TR.launch
catkin_ws/src/twist2multiarray/src/: FourWheelControl.cpp  Node.cpp  ThreeWheelControl.cpp
catkin_ws/src/wtr_canbus/: README.md
catkin_ws/src/wtr_canbus/googleLOG/googletest/: CMakeLists.txt
catkin_ws/src/wtr_canbus/wtr_usb2ros/: CMakeLists.txt
catkin_ws/src/wtr_canbus/wtr_usb2ros/App/: gpio.cpp  main.cpp
catkin_ws/src/wtr_canbus/wtr_usb2ros/include/wtr_can_motor/: can_commute.h  common_include.h  vesc_Tmotor.h
catkin_ws/src/wtr_canbus/wtr_usb2ros/src/: controller.cpp
catkin_ws/src/wtr_odom/: CMakeLists.txt
catkin_ws/src/wtr_odom/include/wtr_odom/: node.h
catkin_ws/src/wtr_odom/src/: node.cpp
catkin_ws/src/wtr_usb2ros/wtr_usb2ros/: CMakeLists.txt
catkin_ws/src/wtr_usb2ros/wtr_usb2ros/App/: gpio.cpp  main.cpp
catkin_ws/src/wtr_usb2ros/wtr_usb2ros/include/wtr_usb2ros/: can.h  common_include.h  gpio.h  motor.h  node.h  odom.h
catkin_ws/src/wtr_usb2ros/wtr_usb2ros/msg/: Test.msg  motor_msgs.msg
catkin_ws/src/wtr_usb2ros/wtr_usb2ros/src/: controller.cpp
